Lesson 3 final commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>INSERT YOUR NAME</title>
+    <title>Kalien Keys</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,19 +41,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#topic1">Highlight #1</a>
+                        <a href="#topic1">Version Control Systems</a>
                     </li>
                     <li>
-                        <a href="#topic2">Hightlight #2</a>
+                        <a href="#topic2">Git</a>
                     </li>
                     <li>
-                        <a href="#topic3">Hightlight #3</a>
+                        <a href="#topic3">Repositories</a>
                     </li>
                     <li>
-                        <a href="#topic4">Hightlight #4</a>
+                        <a href="#topic4">The Impact of VCS</a>
                     </li>
                     <li>
-                        <a href="#topic5">Hightlight #5</a>
+                        <a href="#topic5">Concepts with D3</a>
                     </li>
                 </ul>
             </div>
@@ -63,11 +63,11 @@
     </nav>
 
     <!-- Full Width Image Header -->
-    <header class="header-image">
+    <header>
         <div class="headline">
             <div class="container">
                 <h2>Lesson 3 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>Kalien Keys</h3>
             </div>
         </div>
     </header>
@@ -79,55 +79,55 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="topic1">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/highlight1.png">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Version Control Systems</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Version control systems are also referred to as Revision Control or Source control management.  They're helpful for users so they can hold a plethora of past versions of files.  Further, version control benefits groups or multiple users who collaborate on a single file.  It prevents overwriting and allows all users to see the revision history of who changed what in a given project.  An example of a version control sytem is Git, which I'm learning and utilizing in class currently.  Many big, well-known companies utilize version control systems such as Git, so I enjoy being able to learn about this now for when I go into the workforce after college.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="topic2">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="images/highlight2.png">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">Git</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git works differently from other version control systems because of the way in which is reads the data.  Many version control systems store the information as different sets of files.  Git, however, stores data like snapshots of a file system that references back to the changes made.  Many operations utilized through Git is local which can lead to faster processing with ease for completing and working on projects.  Utilizing Git also only has three states that data can reside in: committed (data is stored locally), modified (changed data that has yet to be committed) and staged (a modified file that has been marked to go into the next committed snapshot).  </p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="topic3">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/highlight3.png">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">Repositories</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">To a put a current project under version control, you need to use a repository.  However, first, there must be a basic framework for this.  This is done using a subdirectory.  The subdirectory assists in initializing the repository in an already existing directory.  This is not the only way of creating a repository.  A user can also clone an existing repository.  This is something useful if, for example, you are collaborating and want to contribute to an already existing project.  The command "git clone" copies all versions of the files.  This can also be helpful if a server crashes.  You can use this to bring up a past version of the server. </p>
         </div>
         
         <hr class="featurette-divider">
         
        <!-- Fourth Featurette -->
         <div class="featurette" id="topic4">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="images/highlight4.jpg">
             <h2 class="featurette-heading">Highlight #4
-                <span class="text-muted">Topic 4 Header</span>
+                <span class="text-muted">The Impact of VCS</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Anyone who needs to create, save, edit, and resave things can utilize version control.  Some examples of users would be  software developers, document authors, and designers.  The benefits for individual users are quite straightforward, such as tracking history.  But the true benefits of these in the workplace come in collaboration with others.  Version control systems such as Git allow merging features.  When users see who is changing what simultaneously in data, these VCS programs allow for easier analysis of what versions to maintain.  This is where the merge feature is helpful.  VCS reminds me of very elementary programs such as Google documents because it allows for collaborative efforts and you can revert back changes.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Fifth Featurette -->
         <div class="featurette" id="topic5">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/highlight5.png">
             <h2 class="featurette-heading">Highlight #5
-                <span class="text-muted">Topic 5 Header</span>
+                <span class="text-muted">Concepts with D3</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Being able to visualize the GIt basics through an online program is very helpful in understanding the basis of this new concept.  It provides diagrams to allow me to understand what committing and creating branches does.  I like this because it helps those who may be more visual learners.  This tool is helpful similarly to being able to use Cloud9 to code along in class because it is interactive.  Being able to directly work with a variety of programs and concepts we learn in class only strengthens my understanding of it.  </p>
         </div>
 
         <hr class="featurette-divider">
